--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
 
+dc_comm.csv
+dc_full.csv
+dc_post.csv
+dc_titl.csv
+dccomments.csv
+dcsubreddits.csv
+dcthreads.csv
+
+jm_comm.csv
+jm_full.csv
+jm_post.csv
+jm_titl.csv
+jmcomments.csv
+jmsubreddits.csv
+jmthreads.csv
+
+
+./shiny_app/dc_comm.csv
+./shiny_app/dc_full.csv
+./shiny_app/dc_post.csv
+./shiny_app/dc_titl.csv
+./shiny_app/dc_post_unique.csv
+./shiny_app/dc_titl_unique.csv
+./shiny_app/dccomments.csv
+./shiny_app/dcsubreddits.csv
+./shiny_app/dcthreads.csv
+./shiny_app/jm_comm.csv
+./shiny_app/jm_full.csv
+./shiny_app/jm_post.csv
+./shiny_app/jm_titl.csv
+./shiny_app/jm_post_unique.csv
+./shiny_app/jm_titl_unique.csv
+./shiny_app/jmcomments.csv
+./shiny_app/jmsubreddits.csv
+./shiny_app/jmthreads.csv
